fix: Exception handling